ecmascript/parser/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames12_ES5/input.ts.stderr
error[1109]: Expected an expression
  --> $DIR/tests/typescript-errors/tsc/es6/computedProperties/computedPropertyNames12_ES5/input.ts:14:13
   |
14 |     static [<any>true]: number;
   |             ^

